yew-macro/tests/macro/html-list-fail.stderr
error: this opening fragment has no corresponding closing fragment
 --> $DIR/html-list-fail.rs:4:13
  |
4 |     html! { <> };
  |             ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this closing fragment has no corresponding opening fragment
 --> $DIR/html-list-fail.rs:5:13
  |
5 |     html! { </> };
  |             ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this opening fragment has no corresponding closing fragment
 --> $DIR/html-list-fail.rs:6:13
  |
6 |     html! { <><> };
  |             ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this closing fragment has no corresponding opening fragment
 --> $DIR/html-list-fail.rs:7:13
  |
7 |     html! { </></> };
  |             ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this opening fragment has no corresponding closing fragment
 --> $DIR/html-list-fail.rs:8:13
  |
8 |     html! { <><></> };
  |             ^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one root html element is allowed (hint: you can wrap multiple html elements in a fragment `<></>`)
 --> $DIR/html-list-fail.rs:9:18
  |
9 |     html! { <></><></> };
  |                  ^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a valid html element
  --> $DIR/html-list-fail.rs:10:15
   |
10 |     html! { <>invalid</> };
   |               ^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: this opening fragment has no corresponding closing fragment
  --> $DIR/html-list-fail.rs:12:13
   |
12 |     html! { <key="key".to_string()>invalid</key>}
   |             ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/html-list-fail.rs:11:5
   |
11 |     html! { <key=></>}
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     expected `()`, found enum `yew::virtual_dom::vnode::VNode`
   |     help: try adding a semicolon: `;`
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
